Fix wrap

--- a/containers/views/landingView/landingView.css
+++ b/containers/views/landingView/landingView.css
@@ -25,6 +25,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .content-half {
